--- a/package.json
+++ b/package.json
@@ -20,15 +20,20 @@
     "redux-saga": "^1.0.5"
   },
   "devDependencies": {
-    "webpack": "^4.36.1",
-    "webpack-cli": "^3.3.6",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.6",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.1.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.1",
+    "eslint-loader": "^2.2.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
     "style-loader": "^0.23.1",
-    "eslint": "^6.1.0",
+    "webpack": "^4.36.1",
+    "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
   },
   "repository": {
