--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "webpack-dev-server --hot --mode development"
   },
   "dependencies": {
+    "@babel/runtime": "^7.5.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.9",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
