--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-react": "^7.0.0",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^4.3.5",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.1.0",
@@ -44,6 +45,7 @@
     "style-loader": "^0.23.1",
     "ts-loader": "^6.0.4",
     "tslint": "^5.19.0",
+    "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.5.3",
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6",
