--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^4.3.5",
     "babel-loader": "^8.0.6",
-    "css-loader": "^3.1.0",
+    "css-loader": "^1.0.1",
     "dotenv-webpack": "^1.7.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.1",
@@ -48,6 +48,7 @@
     "tslint": "^5.19.0",
     "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.5.3",
+    "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
