--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack -d --mode development",
     "build-prod": "webpack -p --mode production",
-    "start": "webpack-dev-server --hot --mode development"
+    "start": "webpack-dev-server --hot --mode development",
+    "prod": "npm run build-prod"
   },
   "dependencies": {
     "@babel/runtime": "^7.5.5",
