--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-dev": "webpack -d --mode development",
     "build-prod": "webpack -p --mode production",
     "start": "webpack-dev-server --hot --mode development",
-    "prod": "npm run build-prod"
+    "deploy": "npm run build-prod && firebase deploy"
   },
   "dependencies": {
     "@babel/runtime": "^7.5.5",
